--- a/app/src/main/res/layout/content_songs_sub_topics.xml
+++ b/app/src/main/res/layout/content_songs_sub_topics.xml
@@ -5,59 +5,50 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".CategoryMain"
-    tools:showIn="@layout/activity_category_main"
+    tools:context=".SongsSubTopics"
+    tools:showIn="@layout/activity_songs_sub_topics"
     android:background="#000000">
 
     <TextView
         android:id="@+id/category_lbl"
         android:layout_width="match_parent"
         android:layout_height="45dp"
-        android:text="@string/titleStr"
+        android:text="@string/choice"
         android:textAlignment="center"
-        android:textSize="30sp"
+        android:textSize="20sp"
         android:textColor="#8A2BE2"
         tools:fontFamily="@font/arbutus" />
 
     <Button
-        android:id="@+id/song_lbl"
-        android:layout_width="178dp"
+        android:id="@+id/org_lbl"
+        android:layout_width="360dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="13dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="69dp"
         android:background="@drawable/rounded_bttn"
-        android:text="@string/songsStr"
-        android:onClick="songChoices"/>
+        android:text="@string/orgStr"
+        android:onClick="orgChoice"/>
 
     <Button
-        android:id="@+id/movie_lbl"
-        android:layout_width="178dp"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/song_lbl"
-        android:layout_toEndOf="@+id/song_lbl"
-        android:background="@drawable/rounded_bttn"
-        android:text="@string/moviesStr" />
-
-    <Button
-        android:id="@+id/bible_lbl"
-        android:layout_width="178dp"
+        android:id="@+id/soj_lbl"
+        android:layout_width="357dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/song_lbl"
-        android:layout_marginTop="148dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="140dp"
         android:background="@drawable/rounded_bttn"
-        android:text="@string/childrenStr" />
+        android:text="@string/sojStr" />
 
     <Button
-        android:id="@+id/children_lbl"
-        android:layout_width="178dp"
+        android:id="@+id/child_lbl"
+        android:layout_width="357dp"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/bible_lbl"
-        android:layout_toEndOf="@+id/song_lbl"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="213dp"
         android:background="@drawable/rounded_bttn"
-        android:text="@string/bibleStr" />
-
+        android:text="@string/childStr" />
 
 </RelativeLayout>
